@@ -37,39 +37,9 @@ Spaces: https://lfoppiano-grobid-quantities.hf.space/
 
 ## Latest version
 
-The latest released version of grobid-quantities
-is [0.7.3](https://github.com/kermitt2/grobid-quantities/releases/tag/v0.7.3). The current development version is
-0.7.4-SNAPSHOT.
+The latest released version of grobid-quantities is [0.7.3](https://github.com/kermitt2/grobid-quantities/releases/tag/v0.7.3). The current development version is 0.7.4-SNAPSHOT.
+**Important**: to upgrade please check [here](https://grobid-quantities.readthedocs.io/gettingStarted.html#upgrade).
 
-### Update from 0.7.2 to 0.7.3
-
-#### Grobid models
-In version 0.7.3 we have updated the DeLFT models. The DL models must be updated by running `./gradlew copyModels`.
-
-#### JDK Update
-The version 0.7.3 enable the support for running with JDK > 11. We recommend to run it with JDK 17.
-Running grobid-quantities with gradle (`./gradlew clean run`) is already supported in the `build.gradle`.
-Running grobid-quantities via the JAR file requires an additional parameter to set the java.path: 
-- Linux: `-Djava.library.path=../grobid-home/lib/lin-64:../grobid-home/lib/lin-64/jep`
-- Mac (arm): `-Djava.library.path=.:/usr/lib/java:../grobid-home/lib/mac_arm-64:{MY_VIRTUAL_ENV}/jep/lib:{MY_VIRTUAL_ENV}/jep/lib/python3.9/site-packages/jep --add-opens java.base/java.lang=ALL-UNNAMED`
-- Mac (intel): `-Djava.library.path=.:/usr/lib/java:../grobid-home/lib/mac-64:{MY_VIRTUAL_ENV}/jep/lib:{MY_VIRTUAL_ENV}/jep/lib/python3.9/site-packages/jep --add-opens java.base/java.lang=ALL-UNNAMED`
-    With `MY_VIRTUAL_ENV` I use `/Users/lfoppiano/anaconda3/envs/jep`
-
-
-### Update from 0.7.1 to 0.7.2
-
-In version 0.7.2 we have updated the DeLFT models.   
-The DL models must be updated by running `./gradlew copyModels`.
-
-### Update from 0.7.0 to 0.7.1
-
-In version 0.7.1 a new version of DeLFT using Tensorflow 2.x is used.  
-The DL models must be updated by running `./gradlew copyModels`.
-
-### Update from 0.6.0 to 0.7.0
-
-In version 0.7.0 the models have been updated, therefore is required to run a `./gradlew copyModels` to have properly
-results especially for what concern the unit normalisation.
 
 ## Documentation
 
